--- a/index.html
+++ b/index.html
@@ -143,7 +143,22 @@
                 </ul>
                 <a href="https://t.me/ws3eqr" class="buy-btn">КУПИТЬ</a>
             </div>
+            
+            <!-- Ава для сервера -->
             <div class="card popular">
+                <div class="badge">MC</div>
+                <div class="glow"></div>
+                <h3>СЕРВЕР АВА</h3>
+                <div class="price">40 ₽</div>
+                <ul class="features">
+                    <li><i class="fa-solid fa-cube"></i> Тематика Minecraft</li>
+                    <li><i class="fa-solid fa-check"></i> Название сервера</li>
+                    <li><i class="fa-solid fa-check"></i> Яркие цвета</li>
+                </ul>
+                <a href="https://t.me/ws3eqr" class="buy-btn">КУПИТЬ</a>
+            </div>
+
+            <div class="card">
                 <div class="glow"></div>
                 <h3>ПРО АВА</h3>
                 <div class="price">100 ₽</div>
@@ -151,9 +166,21 @@
                     <li><i class="fa-solid fa-check"></i> 3D Текст / Глитч</li>
                     <li><i class="fa-solid fa-check"></i> Сложная композиция</li>
                     <li><i class="fa-solid fa-check"></i> Исходник (PSD)</li>
-                    <li><i class="fa-solid fa-check"></i> 3 Варианта на выбор</li>
                 </ul>
                 <a href="https://t.me/ws3eqr" class="buy-btn">КУПИТЬ</a>
+            </div>
+
+            <!-- Босс Дизайн -->
+            <div class="card royal">
+                <div class="glow"></div>
+                <h3>BOSS ART</h3>
+                <div class="price gold-text">100 ₽</div>
+                <ul class="features">
+                    <li><i class="fa-solid fa-crown"></i> <b>Уникальный стиль</b></li>
+                    <li><i class="fa-solid fa-check"></i> Детализация X2</li>
+                    <li><i class="fa-solid fa-check"></i> Арт с нуля</li>
+                </ul>
+                <a href="https://t.me/ws3eqr" class="buy-btn gold-btn">ЗАКАЗАТЬ</a>
             </div>
         </div>
 
@@ -174,7 +201,7 @@
                 <a href="https://t.me/ws3eqr" class="buy-btn">КУПИТЬ</a>
             </div>
             
-            <!-- СЕРВЕР+ (Улучшенный) -->
+            <!-- СЕРВЕР+ (Исправленный) -->
             <div class="card popular">
                 <div class="badge">ВЫГОДНО</div>
                 <div class="glow"></div>
